2012-10-21  6.8.0-3 Cristy  <quetzlzacatenango@image...>
  * TIFF positional information must be positive (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22106).

2012-10-21  6.8.0-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.0-2, SVN revision 9738.

2012-10-20  6.8.0-2 Cristy  <quetzlzacatenango@image...>
  * Wait for more bytes if the number of returned bytes is less than
    requested in ReadBlob().
  * Prefer fullname property for font, if it exists, otherwise famly + style.

2012-10-17  6.8.0-2 Anthony Thyssen <A.Thyssen@griffith...>
  * Added LanczosRadius filter, that blurs an EWA Lanczos to a integer
    support size. Equivalent to Lanczos in tensor resize case.

2012-10-16  6.8.0-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.0-1, SVN revision 9632.

2012-10-12  6.8.0-1 Cristy  <quetzlzacatenango@image...>
  * Fix color management for the -solarize option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22059).
  * Some colormap unit tests failed for a quantum depth of 32 (problem
    report from Glenn Randers-Pehrson).

2012-10-12  6.8.0-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.0-0, SVN revision 9594.

2012-10-07  6.8.0-0 Cristy  <quetzlzacatenango@image...>
  * Check -fx expression early to prevent fault.
  * Performance boost for iOS / Android requires a SO major version increment.
  * Corrupt PNG image could cause a memory leak (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22024).

2012-10-06  6.7.9-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-10, SVN revision 9514.

2012-10-01  6.7.9-10 Cristy  <quetzlzacatenango@image...>
  * SVG specs says "1pt" equals "1.25px" (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21967).
  * Support TIFF proprietary tag 34118.
  * The define option is no longer "lazy" interpretation (reference